--- a/package.json
+++ b/package.json
@@ -16,19 +16,22 @@
 		"check": "biome check --write ."
 	},
 	"dependencies": {
+		"@tailwindcss/typography": "^0.5.16",
 		"@tailwindcss/vite": "^4.1.11",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.535.0",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
+		"react-markdown": "^10.1.0",
+		"remark-gfm": "^4.0.1",
 		"tailwind-merge": "^3.3.1",
 		"tailwindcss": "^4.1.11"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.1.3",
 		"@types/node": "^24.1.0",
-		"@types/react": "^19.1.8",
+		"@types/react": "^19.1.9",
 		"@types/react-dom": "^19.1.6",
 		"@vitejs/plugin-react": "^4.7.0",
 		"@vitejs/plugin-react-swc": "^3.10.2",
