--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"react-markdown": "^10.1.0",
+		"remark-breaks": "^4.0.0",
 		"remark-gfm": "^4.0.1",
 		"tailwind-merge": "^3.3.1",
 		"tailwindcss": "^4.1.11"
